--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.1.1",
     "customize-cra": "^0.2.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "reselect": "^4.0.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
