--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.1.1",
+    "@material-ui/lab": "^4.0.0-alpha.16",
     "customize-cra": "^0.2.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
